--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world!</p>
+    <p>Hello!</p>
 
     <script src="js3/script3.js"></script>
 </body>
