task with movies

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello!</p>
+    <p>Hello!</p> 
     <h2>Hi!</h2>
 
-    <script src="js3/script3.js"></script>
+    <script src="task1/script.js"></script>
 </body>
 </html>
