--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Hello!</p> 
     <h2>Hi!</h2>
 
-    <script src="practicefunctions/script.js"></script>
+    <script src="019 callback/script.js"></script>
 </body>
 </html>
