--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Hello!</p> 
     <h2>Hi!</h2>
 
-    <script src="020_объекты_деструктуризация_объектов/script.js"></script>
+    <script src="021Массивы_и_псевдомассивы/script.js"></script>
 </body>
 </html>
