--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Hello!</p> 
     <h2>Hi!</h2>
 
-    <script src="023_объектно_ориентированное_программирование/script.js"></script>
+    <script src="024_practice4_using objects/script.js"></script>
 </body>
 </html>
